# relyloop

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  README.md  REUSE.toml  SECURITY.md  alembic.ini  architecture.md  docker-compose.override.yml  docker-compose.yml  mvp1-execution-plan.md  pyproject.toml  relevance-copilot-spec.md  state.md  state_history.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-guides-freshness.yml  codeql.yml  copy-docs-freshness.yml  dco.yml  demo-reseed-nightly.yml  deploy-docs.yml  pr.yml  reconcile-tracking-issues.yml  scorecard.yml  secrets-defense.yml
backend/app/: main.py  openapi_export.py
backend/tests/: _log_helpers.py  conftest.py
backend/workers/: all.py  auto_followup.py  baseline.py  demo_reseed.py  digest.py  digest_stub.py  git_pr.py  helpers.py  judgments.py  judgments_resume.py  judgments_ubi.py  orchestrator.py  pr_reconcile.py  register_webhook.py  trials.py
docker/ollama/: entrypoint.sh
docker/solr/: bootstrap-security.sh
docs/: README.md
docs/00_overview/: BACKLOG_DASHBOARD.md  DASHBOARD.md  GA_DASHBOARD.md  MVP1_5_DASHBOARD.md  MVP1_DASHBOARD.md  MVP2_DASHBOARD.md  README.md  UNSURE_DASHBOARD.md  adjacent-tools.md  backlog_dashboard.html  dashboard.html  ga_dashboard.html  mvp1_5_dashboard.html  mvp1_dashboard.html  mvp2_dashboard.html  oss-launch-checklist.md  relyloop-spec.md  unsure_dashboard.html
docs/01_architecture/: README.md  adapters.md  agent-tools.md  api-conventions.md  apply-path.md  cluster-lifecycle.md  data-model.md  deployment.md  llm-orchestration.md  mvp1-overview.md  mvp2-overview.md  optimization.md  system-overview.md  tech-stack.md  ui-architecture.md
docs/02_product/: README.md  mvp1-user-stories.md
docs/03_runbooks/: README.md  agent-debugging.md  auto-followup-debugging.md  cluster-registration.md  convergence-verdict.md  corporate-network-install.md  demo-reseed-debugging.md  demo-reseed-engine-tolerance.md  digest-debugging.md  judgment-generation-debugging.md  local-dev.md  optuna-debugging.md  oss-history-audit.md  parallel-worktrees.md  pr-open-debugging.md  release-checklist.md  smoke-solr-stability.md  solr-cluster-registration.md  study-lifecycle-debugging.md  ubi-judgment-generation.md  ui-debugging.md  webhook-debugging.md  website-guides-regen.md
docs/04_security/: README.md  cluster-url-ssrf.md  github-token-handling.md  internal-domain-hygiene.md  license-inventory.md  llm-data-flow.md
docs/05_quality/: README.md  testing.md
docs/06_vendor_docs/: README.md  elasticsearch-tunable-params.md  github-branch-protection.md  github-pages-custom-domain.md  opensearch-tunable-params.md  solr-tunable-params.md
docs/07_research/: README.md  comparison.md  complementary-architecture.md
docs/08_guides/: README.md  llm-endpoint-setup.md  quick-tour.md  tutorial-first-study.md  workflows-overview.md
docs/09_decisions/: README.md
docs/blog/: 2026-05-20-haystack-to-relyloop-teams.md  2026-05-20-haystack-to-relyloop.md  2026-05-22-elevator-pitch-search-platform.md
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_clusters_config_repos.py  0003_study_lifecycle_schema.py  0004_judgments.py  0005_digests.py  0006_proposals_pr_url_idx.py  0007_conversations_messages.py  0008_search_vector_clusters.py  0009_search_vector_studies.py  0010_search_vector_query_sets.py  0011_search_vector_query_templates.py  0012_search_vector_judgment_lists.py  0013_search_vector_conversations.py  0014_clusters_target_filter.py  0015_trials_per_query_metrics.py  0016_config_repos_last_merged_proposal_id.py  0017_proposals_last_polled_at.py  0018_studies_parent_proposal.py  0019_digests_suggested_followups_jsonb.py  0020_studies_baseline_trial.py  0021_judgment_lists_generation_params.py  0022_solr_engine_auth_check.py  0023_proposals_superseded_status.py
prompts/: digest_narrative.system.md  digest_narrative.user.jinja  judgment_generation.rubric_v1.md  judgment_generation.system.md  judgment_generation.user.jinja  orchestrator.system.md
samples/: LICENSE  products.json  queries.csv  ubi_index_mappings.json
samples/templates/: README.md  bool_boosted.j2  bool_boosted.search_space.json  function_score_decay.j2  function_score_decay.search_space.json  multi_match_basic.j2  multi_match_basic.search_space.json  product_search.j2  rescore_phrase.j2  rescore_phrase.search_space.json
scripts/: allowed_public_domains.txt  build_mvp1_dashboard.py  build_public_roadmap.py  check-conventional-commit.sh  check-dco-signoff.sh  check-state-md-size.sh  check_internal_domains.py  corp-ca-extract.sh  gen_license_inventory.py  install.sh  reconcile_tracking_issues.py  regen-generated-artifacts.sh  run-pnpm.sh  run-tests-in-worktree.sh  seed_meaningful_demos.py
scripts/ci/: check-no-env-files.sh  test_check_no_env_files.sh  test_load_relyloop_env_file.sh  test_parse_relyloop_engine_versions.sh  test_parse_relyloop_engines.sh  test_parse_relyloop_llm.sh  test_relyloop_native_llm.sh  test_verify_build_guides_fresh.sh  test_verify_copy_docs_fresh.sh  test_verify_engine_version_matrix_parity.sh  test_verify_openapi_snapshot_fresh.sh  test_verify_types_fresh.sh  verify_build_guides_fresh.sh  verify_built_site_asset_refs.sh  verify_copy_docs_fresh.sh  verify_demo_slug_parity.sh  verify_engine_version_matrix_parity.sh  verify_enum_source_of_truth.sh  verify_install_builds_all_services.sh  verify_openapi_snapshot_fresh.sh  verify_types_fresh.sh
scripts/lib/: relyloop_engine_versions.sh  (+5 more)
ui/: .dockerignore  .eslintrc.json  .prettierignore  Dockerfile  css-modules.d.ts  eslint.config.mjs  next.config.mjs  openapi.json  package.json  playwright.config.ts  playwright.demo.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json  vitest.config.ts
website/: README.md  mkdocs.yml  requirements.txt
(+2105 files in other folders)
