[project]
name = "relyloop"
version = "0.1.0"
description = "Open-source automated relevance tuning for enterprise search platforms"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "soundminds.ai", email = "engineering@soundminds.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    # psycopg2-binary is the sync Postgres driver for one-shot DDL outside the
    # async event loop — used by `init_optuna_schema()` (CREATE SCHEMA IF NOT
    # EXISTS optuna). Async asyncpg is the primary path for app traffic.
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.55",
    "structlog>=24.4",
    "arq>=0.26",
    "uuid-utils>=0.10",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-recording>=0.13",
    "testcontainers[postgresql]>=4.9",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "migrations/versions",  # Alembic-generated; let the tool's defaults stand
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle (docstrings)
]
ignore = [
    "D100",  # missing module docstring
    "D104",  # missing package docstring
    "D203",  # 1-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S", "D"]      # bandit + docstrings: tests legitimately use
                                      # asserts, subprocess, fixtures-as-credentials
"migrations/env.py" = ["E402", "D"]   # alembic generated boilerplate
"migrations/versions/*.py" = ["D", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
files = ["backend"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_any_unimported = true

# Tests run against fixtures and pytest decorators that don't always carry
# precise types. Relax strict-untyped requirements there but keep most checks.
[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires Docker / external services (Postgres, Redis, ES, OpenSearch)",
]

# ---------------------------------------------------------------------------
# Coverage (80% gate per infra_foundation FR-4)
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/app/main.py",          # bootstrap; covered indirectly by integration tests
    "migrations/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "if __name__ == \"__main__\":",
]
