# SPDX-FileCopyrightText: 2026 soundminds.ai
#
# SPDX-License-Identifier: Apache-2.0

[project]
name = "relyloop"
version = "0.1.0"
description = "Open-source automated relevance tuning for enterprise search platforms"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "soundminds.ai", email = "engineering@soundminds.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    # psycopg2-binary is the sync Postgres driver for one-shot DDL outside the
    # async event loop — used by `init_optuna_schema()` (CREATE SCHEMA IF NOT
    # EXISTS optuna). Async asyncpg is the primary path for app traffic.
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "redis>=5.2",
    "httpx>=0.28",
    "openai>=1.55",
    "structlog>=24.4",
    "arq>=0.26",
    "uuid-utils>=0.10",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "optuna>=3.6",
    # Required by Optuna's default FanovaImportanceEvaluator (used by the
    # digest worker's optuna.importance.get_param_importances call). Without
    # it, the call raises ImportError, the broad except swallows it, and
    # every digest's parameter_importance is silently {}. See
    # docs/02_product/planned_features/bug_digest_param_importance_seam/bug_fix.md.
    "scikit-learn>=1.4",
    # IR-evaluation engine. Wraps multiple backends (pytrec_eval, gdeval,
    # judged_as_relevant) behind a typed metric-object DSL (nDCG@10, AP@5,
    # RR, P@k, R@k). Migrated from the abandoned pytrec_eval direct
    # dependency by infra_ir_measures_migration; the parity gate at
    # backend/tests/unit/eval/test_scoring_parity.py keeps both backends'
    # values byte-identical to 6 decimal places.
    "ir-measures>=0.4.3",
    # Headless plotting for the open_pr worker's parameter-importance chart.
    # PNG only — Agg backend, no GUI. Bundled with the API+worker image.
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "pytest-recording>=0.13",
    # pytest-xdist enables `-n auto` parallel test execution. CI-perf only:
    # the workflow passes `-n auto` to the backend full pytest call, cutting
    # backend job time roughly in half. Local devs can opt in similarly.
    # See chore_ci_perf_buildx_artifact_image_cache_xdist/idea.md.
    "pytest-xdist>=3.6",
    # NB: the parity test at backend/tests/unit/eval/test_scoring_parity.py
    # does `import pytrec_eval` and compares its output side-by-side with
    # ir_measures. That `pytrec_eval` module is provided by
    # `pytrec-eval-terrier` (the actively-maintained PyTerrier fork), which
    # ir_measures pulls transitively into the runtime image already. We do
    # NOT add a separate `pytrec-eval>=0.5` dev pin here — the abandoned
    # `pytrec-eval` distribution and `pytrec-eval-terrier` both publish to
    # the same `pytrec_eval` module name, so an explicit dev pin on the
    # abandoned distribution would conflict at install time (race depends
    # on install order; CI hit the abandoned wheel and ir_measures lost its
    # cut-aware-metric backend). The transitive pytrec-eval-terrier is
    # sufficient for the parity test. See feature_spec.md FR-4 +
    # implementation_plan.md Story 1.1 for context.
    "testcontainers[postgresql]>=4.9",
    "pre-commit>=4.6.0",
    "types-PyYAML>=6.0",
    "asgi-lifespan>=2.1",
    # REUSE (https://reuse.software/) — SPDX-header linter. `reuse lint` runs in
    # pre-commit and CI to enforce that every new source file carries an SPDX
    # header; `reuse annotate` adds them. See REUSE.toml for the coverage map.
    "reuse>=4.0.0",
    # pip-licenses — feeds scripts/gen_license_inventory.py (the dependency
    # license-compatibility audit). Used by the `license-inventory` CI gate.
    "pip-licenses>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "migrations/versions",  # Alembic-generated; let the tool's defaults stand
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
    "I",    # isort
    "D",    # pydocstyle (docstrings)
]
ignore = [
    "D100",  # missing module docstring
    "D104",  # missing package docstring
    "D203",  # 1-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S", "D"]      # bandit + docstrings: tests legitimately use
                                      # asserts, subprocess, fixtures-as-credentials
"migrations/env.py" = ["E402", "D"]   # alembic generated boilerplate
"migrations/versions/*.py" = ["D", "E501"]
"scripts/**" = ["D"]                  # operator tooling (e.g., dashboard generator)
                                      # — same rationale as tests: not library code

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Mypy (type checker)
# ---------------------------------------------------------------------------

[tool.mypy]
strict = true
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["backend"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
disallow_any_unimported = true

# Tests run against fixtures and pytest decorators that don't always carry
# precise types. Relax strict-untyped requirements there but keep most checks.
[[tool.mypy.overrides]]
module = "backend.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false

# ``scripts/seed_meaningful_demos.py`` is an operator CLI (run from the host
# shell, not part of the API process). Its dict literals are untyped on
# purpose — keeping the source readable as a flat scenario catalogue.
# feat_home_demo_reseed_endpoint imports ``SCENARIOS`` / ``TRUNCATE_TABLES``
# at the module boundary and casts to a typed shape there; we don't want
# mypy --strict to follow the import back into the CLI.
[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# Third-party libraries without py.typed marker / stubs.
#
# (infra_ir_measures_migration removed the pytrec_eval module override here:
# the runtime dependency was swapped to ir-measures, which transitively pulls
# pytrec-eval-terrier — the actively-maintained PyTerrier fork that ships
# `py.typed`. ir_measures itself ships `py.typed` too. Both modules are now
# strict-typeable; no override needed.)

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires Docker / external services (Postgres, Redis, ES, OpenSearch)",
    "benchmark: opt-in performance benchmarks; not part of the default test layer",
    "smoke: end-to-end smoke against a running stack; not part of the default test layer",
]

# ---------------------------------------------------------------------------
# Coverage (80% gate per infra_foundation FR-4)
# ---------------------------------------------------------------------------

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/app/main.py",          # bootstrap; covered indirectly by integration tests
    "migrations/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
    "if __name__ == \"__main__\":",
]
